# MindWeave

./: .gitignore  2.0_ohos_mindweave_build.sh  AGENTS.md  README.md  README_CN.md  build.2.0.ohos.gradle.kts  gradlew  identifier.sqlite  settings.2.0.ohos.gradle.kts  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/desktop-icons/: app_icon.icns
composeApp/src/androidMain/kotlin/org/example/mindweave/: MainActivity.kt
composeApp/src/androidMain/res/drawable/: ic_launcher_background.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/org/example/mindweave/: App.kt
composeApp/src/commonTest/kotlin/org/example/mindweave/: ComposeAppCommonTest.kt
composeApp/src/iosMain/kotlin/org/example/mindweave/: MainViewController.kt
composeApp/src/jvmMain/kotlin/org/example/mindweave/: DesktopAiSettings.kt  main.kt
composeApp/src/webMain/kotlin/org/example/mindweave/: main.kt
composeApp/src/webMain/resources/: index.html
database/: create_server_db.sql  postgres.sql  schema.sq  schema.sql  sqlite.sql  sqlite_init.sql
docs/: Ruler.md  harmony-arkui-bridge.md  harmony-cross-platform-practice.md  mindweave-plan.md  spec.md
gradle/: libs.versions.toml
harmonyApp/: build-profile.json5  hvigorfile.ts  oh-package.json5
harmonyApp/AppScope/: app.json5
harmonyApp/AppScope/resources/base/element/: string.json
harmonyApp/entry/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
harmonyApp/entry/src/main/: module.json5
harmonyApp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
harmonyApp/entry/src/main/cpp/types/mindweave_bridge/: index.d.ts  oh-package.json5
harmonyApp/entry/src/main/ets/bridge/: BridgeRuntimeConfig.ets  MindWeaveBridge.ets
harmonyApp/entry/src/main/ets/entryability/: EntryAbility.ets
harmonyApp/entry/src/main/ets/pages/: Index.ets
harmonyApp/entry/src/main/resources/base/element/: string.json
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
server/: build.gradle.kts
server/src/main/kotlin/org/example/mindweave/: Application.kt
server/src/main/kotlin/org/example/mindweave/server/: ApplicationModule.kt
server/src/main/resources/: application.conf
server/src/test/kotlin/org/example/mindweave/: ApplicationTest.kt
server/src/test/kotlin/org/example/mindweave/server/: ApplicationTest.kt  CrossDeviceSyncIntegrationTest.kt  ServerConfigTest.kt
shared/: build.2.0.ohos.gradle.kts  build.gradle.kts
shared/src/androidMain/kotlin/org/example/mindweave/: Platform.android.kt
shared/src/androidMain/kotlin/org/example/mindweave/database/: DriverFactory.android.kt  PlatformContext.android.kt
shared/src/commonMain/kotlin/org/example/mindweave/: AuthDefaults.kt  Constants.kt  Greeting.kt  Platform.kt
shared/src/commonMain/kotlin/org/example/mindweave/ai/: AiAgent.kt  AiEngine.kt  AiRouter.kt  AiSettings.kt  ChatContextAssembler.kt  ContextAssembler.kt  KoogAiAgent.kt  ModelManager.kt  OfflineAiAgent.kt  OpenAiAgent.kt
shared/src/commonMain/kotlin/org/example/mindweave/app/: MindWeaveAppGraph.kt  MindWeaveFacade.kt
shared/src/commonMain/kotlin/org/example/mindweave/database/: DriverFactory.kt  PlatformContext.kt
shared/src/commonMain/kotlin/org/example/mindweave/network/: HttpClientFactory.kt  KtorSyncApi.kt
shared/src/commonMain/kotlin/org/example/mindweave/repository/: AccountRepository.kt  ChatRepository.kt  DiaryRepository.kt  ModelPackageRepository.kt  ScheduleRepository.kt  SyncRepository.kt  TagRepository.kt  UserPreferencesRepository.kt
shared/src/commonMain/kotlin/org/example/mindweave/sync/: InMemorySyncApi.kt  LocalChangeApplier.kt  LwwConflictResolver.kt  SyncApi.kt  SyncContracts.kt  SyncErrors.kt  SyncManager.kt
shared/src/commonMain/kotlin/org/example/mindweave/util/: AppJson.kt  IdGenerator.kt  Now.kt  PasswordHashing.kt  TimeFormatting.kt
shared/src/commonMain/sqldelight/org/example/mindweave/db/: 1.sqm  2.sqm  3.sqm  4.sqm  Chat.sq  DiaryEntry.sq  Profile.sq  ScheduleEvent.sq  Sync.sq  Tag.sq
shared/src/commonTest/kotlin/org/example/mindweave/: SharedCommonTest.kt
shared/src/iosMain/kotlin/org/example/mindweave/: Platform.ios.kt
shared/src/iosMain/kotlin/org/example/mindweave/database/: DriverFactory.ios.kt  PlatformContext.ios.kt
shared/src/iosMain/kotlin/org/example/mindweave/network/: HttpClientFactory.ios.kt
shared/src/jsMain/kotlin/org/example/mindweave/: Platform.js.kt
shared/src/jvmMain/kotlin/org/example/mindweave/: Platform.jvm.kt
shared/src/jvmMain/kotlin/org/example/mindweave/ai/: AiAgentFactory.jvm.kt
shared/src/jvmMain/kotlin/org/example/mindweave/database/: DriverFactory.jvm.kt  PlatformContext.jvm.kt
shared/src/ohosArm64Main/kotlin/org/example/mindweave/: Platform.ohos.kt
shared/src/ohosProfileCommonMain/kotlin/kotlinx/serialization/: Serializable.kt
shared/src/wasmJsMain/kotlin/org/example/mindweave/: Platform.wasmJs.kt
(+32 files in other folders)
